--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap");
 
 /* Variaveis (cores e fonts) */
 
- :root {
+:root {
     --clr-dark: #111;
-    --clr-light: #F2F2F2;
-    --clr-pop: #3DB5AA;
+    --clr-light: #f2f2f2;
+    --clr-pop: #3db5aa;
     --clr-accent: #309088;
     --clr-accent2: #0c2422;
     --clr-btn: rgb(66, 66, 66);
@@ -100,6 +100,16 @@ p {
     margin-bottom: 2em;
     font-size: clamp(1rem, 1vw + 0.5rem, 1.333rem);
     line-height: 140%;
+    text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+    p {
+        text-align: justify;
+    }
+    .centered-text {
+        text-align: center;
+    }
 }
 
 
@@ -121,6 +131,11 @@ header {
     justify-content: center;
     padding: 0px 10px;
     font-size: clamp(1.167rem, 1vw + 1rem, 1.5rem);
+}
+
+#public {
+    height: 50px;
+    max-height: 50px;
 }
 
 header a {
@@ -298,6 +313,9 @@ header ul li:hover {
     }
     #enter2 {
         display: none;
+    }
+    #public #enter2 {
+        display: flex;
     }
 }
 
