--- a/css/styles.css
+++ b/css/styles.css
@@ -96,17 +96,29 @@ h5 {
     color: var(--clr-pop);
 }
 
-p {
+p,
+.index_list {
     font-weight: lighter;
-    margin-bottom: 2em;
+    margin-bottom: 0.5em;
     font-size: clamp(1rem, 1vw + 0.5rem, 1.333rem);
     line-height: 140%;
     text-align: center;
 }
 
+.index_list {
+    text-align: justify;
+    margin: 0 auto;
+    width: 40em;
+}
+
 @media only screen and (max-width: 600px) {
     p {
         text-align: justify;
+    }
+    .index_list {
+        max-width: 35em;
+        width: auto;
+        margin: 0 1.2em;
     }
     .centered-text {
         text-align: center;
