--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ header {
     left: 0px;
     z-index: 999;
     background-color: var(--clr-dark);
-    height: 100px;
+    height: 90px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -264,7 +264,7 @@ header ul a:hover {
 
 header ul li {
     padding: 5px;
-    margin-left: 20px;
+    margin: 0px 10px;
     cursor: pointer;
 }
 
@@ -472,6 +472,7 @@ main {
 
 .container {
     font-size: clamp(1.083rem, 1vw + 0.75rem, 1.417rem);
+    margin-top: 80px;
 }
 
 .container a {
@@ -490,7 +491,7 @@ table {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     background-color: var(--clr-white);
-    width: 90%;
+    width: 60%;
     line-height: 120%;
 }
 
@@ -509,8 +510,13 @@ th {
 .container th {
     background-color: var(--clr-accent);
     color: var(--clr-white);
-    font-size: clamp(1.167rem, 1vw + 0.85rem, 1.5rem);
+    font-size: clamp(1.333rem, 1.05vw + 1rem, 1.667rem);
     line-height: normal;
+}
+
+.container td {
+    font-size: clamp(1.167rem, 1vw + 0.85rem, 1.5rem);
+    padding: 20px 10px;
 }
 
 .container th a {
@@ -539,5 +545,29 @@ table td:nth-child(1) {
 @media (max-width: 767px) {
     table {
         width: 90%;
+    }
+    .container td {
+        padding: 15px 10px;
+    }
+    .container {
+        margin-top: 35px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    table {
+        width: 80%;
+    }
+    .container {
+        margin-top: 50px;
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+    table {
+        width: 70%;
+    }
+    .container {
+        margin-top: 65px;
     }
 }
